--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <link rel="stylesheet" href="./style.css">
     <script src="./app/index.js" type="module"></script>
     <app-container></app-container>
 </body>
