--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <script src="./app/index.js" type="module"></script>
     <app-container></app-container>
